--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,8 @@
         </div>
       </div>
     </div>
+
+    <a class="text-center block py-4 text-gray-500" href="https://github.com/thinkerchan/vercel-telegram-file">@thinkerchan</a>
   </div>
 
   <script>
